--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "seed": "ts-node src/config/seed.ts",
+    "drizzle:push": "drizzle-kit push",
+    "drizzle:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +17,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "drizzle-orm": "^0.36.0",
     "express": "^4.18.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.0.0"
@@ -22,7 +26,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.19.27",
+    "drizzle-kit": "^0.30.0",
     "nodemon": "^3.0.0",
     "ts-node": "^10.9.0",
     "typescript": "^5.0.0"
